# stream-ciphers

./: .gitignore  .travis.yml  .typos.toml  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml.save  test_aesni.sh
.github/: dependabot.yml
.github/workflows/: aes-ctr.yml  benches.yml  cfb-mode.yml  cfb8.yml  chacha20.yml  ctr.yml  hc-256.yml  ofb.yml  publish.yml  rabbit.yml  rc4.yml  salsa20.yml  workspace.yml
aes-ctr/: CHANGELOG.md  Cargo.toml  README.md
aes-ctr/benches/: aes128_ctr.rs  aes192_ctr.rs  aes256_ctr.rs  mod.rs
aes-ctr/src/: dummy.rs  lib.rs  soft.rs
aes-ctr/tests/: lib.rs  mod.rs
benches/: Cargo.toml  README.md  results.md  results_neon.md
benches/.cargo/: config.example
benches/src/: chacha20.rs  lib.rs  salsa20.rs
cfb-mode/: CHANGELOG.md  Cargo.toml  README.md
cfb-mode/benches/: cfb-mode.rs  mod.rs
cfb-mode/src/: errors.rs  lib.rs
cfb-mode/tests/: lib.rs  mod.rs
cfb-mode/tests/data/: aes128.blb  aes192.blb  aes256.blb  cfb128-aes128.blb  cfb128-aes192.blb  cfb128-aes256.blb
cfb8/: CHANGELOG.md  Cargo.toml  README.md
cfb8/benches/: cfb8.rs  mod.rs
cfb8/src/: lib.rs
cfb8/tests/: lib.rs  mod.rs
cfb8/tests/data/: aes128.blb  aes192.blb  aes256.blb
chacha20/: CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
chacha20/benches/: chacha12.rs  chacha20.rs  chacha8.rs  mod.rs  rng.rs  stream_cipher.rs
chacha20/src/: backend.rs  backends.rs  block.rs  chacha.rs  cipher.rs  legacy.rs  lib.rs  max_blocks.rs  rng.rs  variants.rs  xchacha.rs  xchacha20.rs
chacha20/src/backend/: autodetect.rs  avx2.rs  neon.rs  soft.rs  sse2.rs
chacha20/src/backends/: avx2.rs  avx512.rs  neon.rs  soft.rs  sse2.rs
chacha20/src/block/: avx2.rs  mod.rs  soft.rs  sse2.rs
chacha20/tests/: chacha20.rs  kats.rs  lib.rs  mod.rs  rng.rs  xchacha20.rs
chacha20/tests/data/: chacha20-legacy.blb  chacha20.blb  chacha20_long_ciphertext.txt  chacha20_long_plaintext.txt
ctr/: CHANGELOG.md  Cargo.toml  README.md
ctr/benches/: aes128.rs  mod.rs
ctr/src/: ctr128.rs  ctr32.rs  flavors.rs  lib.rs
ctr/src/flavors/: ctr128.rs  ctr32.rs  ctr64.rs
ctr/tests/: gost.rs  lib.rs  mod.rs
ctr/tests/ctr128/: mod.rs
ctr/tests/ctr32/: big_endian.rs  little_endian.rs
hc-128/: Cargo.toml  LICENSE-MIT
hc-128/src/: lib.rs
hc-256/: CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
hc-256/benches/: mod.rs
hc-256/src/: lib.rs
hc-256/tests/: lib.rs  mod.rs
ofb/: CHANGELOG.md  Cargo.toml  README.md
ofb/benches/: cfb-mode.rs  mod.rs
ofb/src/: lib.rs
ofb/tests/: lib.rs  mod.rs
ofb/tests/data/: aes128.blb
rabbit/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
rabbit/benches/: mod.rs  rabbit.rs
rabbit/src/: lib.rs
rabbit/tests/: mod.rs
rc4/: CHANGELOG.md  Cargo.toml  README.md
rc4/benches/: mod.rs
rc4/src/: lib.rs
rc4/tests/: lib.rs
salsa/: Cargo.toml
salsa-family/: Cargo.toml
salsa-family/tests/: chacha20.rs  salsa20.rs
salsa/src/: chacha.rs  lib.rs  salsa.rs  salsa_family_state.rs
salsa/tests/: chacha20.rs  salsa20.rs
salsa20/: CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md
salsa20-core/: CHANGES.md  Cargo.toml
salsa20-core/src/: lib.rs  salsa_family_state.rs
salsa20-family/: Cargo.toml
salsa20-family/src/: lib.rs  salsa.rs  salsa_family_state.rs
salsa20-family/tests/: chacha20.rs  salsa20.rs
salsa20/benches/: mod.rs  salsa20.rs
salsa20/src/: backends.rs  block.rs  cipher.rs  lib.rs  salsa.rs  xsalsa.rs  xsalsa20.rs
salsa20/src/backends/: neon.rs  soft.rs  sse2.rs
salsa20/tests/: cross_platform_arm_compatibility.rs  cross_validation.rs  ecrypt.rs  lib.rs  mod.rs  neon_validation.rs  salsa20.rs
salsa20/tests/data/: ecrypt.blb  ecrypt16.blb
