[workspace]
resolver = "2"
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "rc4",
    "salsa20",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# https://github.com/RustCrypto/utils/pull/1187
blobby = { git = "https://github.com/RustCrypto/utils" }
# https://github.com/RustCrypto/traits/pull/1959
# https://github.com/RustCrypto/traits/pull/1976
cipher = { git = "https://github.com/RustCrypto/traits" }
# https://github.com/RustCrypto/utils/pull/1201
# https://github.com/RustCrypto/traits/pull/1976
block-buffer = { git = "https://github.com/RustCrypto/utils" }
# https://github.com/RustCrypto/traits/pull/1976
inout = { git = "https://github.com/RustCrypto/utils" }
