[workspace]
resolver = "2"
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "rc4",
    "salsa20",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
# TODO: remove after rand_core v0.10.0-rc.1 is released
rand_core = { git = "https://github.com/rust-random/rand", branch = "push-spqltotzmryv" }
