[workspace]
resolver = "2"
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "rc4",
    "salsa20",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
crypto-common = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
cipher = { git = "https://github.com/RustCrypto/traits", branch = "block_sizes" }
