[package]
name = "aes-ctr"
version = "0.4.0"
description = "AES-CTR stream ciphers"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/aes-ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
stream-cipher = "0.4"

[target.'cfg(not(all(target_feature = "aes", target_feature = "sse2", target_feature = "ssse3", any(target_arch = "x86_64", target_arch = "x86"))))'.dependencies]
ctr = { version = "0.4", path = "../ctr" }
aes-soft = "0.4"

[target.'cfg(all(target_feature = "aes", target_feature = "sse2", target_feature = "ssse3", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
aesni = "0.7"

[dev-dependencies]
stream-cipher = { version = "0.4", features = ["dev"] }
