[package]
name = "benches"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Criterion benchmarks of the stream-cipher crates"
edition = "2018"
publish = false

[workspace]

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
chacha20 = { path = "../chacha20/" }

[[bench]]
name = "chacha20"
path = "src/chacha20.rs"
harness = false

[patch.crates-io]
cipher = { git = "https://github.com/RustCrypto/traits/", branch = "cipher_v0.4" }
inout = { git = "https://github.com/RustCrypto/utils", branch = "add_inout" }
