[package]
name = "benches"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Criterion benchmarks of the stream-cipher crates"
edition = "2018"
publish = false

[workspace]

[dev-dependencies]
criterion = "0.3"
chacha20 = { path = "../chacha20/", features = ["rng"] }
rand_chacha = {version = "0.3.1"}

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "chacha20"
path = "src/chacha20.rs"
harness = false