[package]
name = "benches"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = "Criterion benchmarks of the stream-cipher crates"
edition = "2021"
publish = false

[workspace]

[dependencies]
criterion = "0.5"
chacha20 = { path = "../chacha20/", features = ["rng", "zeroize"] }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86", all(target_arch = "aarch64", target_os = "linux")))'.dependencies]
criterion-cycles-per-byte = "0.6.0"

[[bench]]
name = "chacha20"
path = "src/chacha20.rs"
harness = false