[package]
name = "cfb-mode"
version = "0.6.0-pre"
description = "Generic Cipher Feedback (CFB) mode implementation."
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cfb-mode"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "block-mode"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = "0.2"

[dev-dependencies]
aes = "0.6"
cipher = { version = "0.2", features = ["dev"] }
hex-literal = "0.2"
