[package]
name = "cfb8"
version = "0.7.0"
description = "Generic 8-bit Cipher Feedback (CFB8) mode implementation."
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cfb8"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "block-mode"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = "0.3"

[dev-dependencies]
aes = { version = "0.7", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
cipher = { version = "0.3", features = ["dev"] }
hex-literal = "0.2"
