[package]
name = "chacha20"
version = "0.8.2" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
The ChaCha20 stream cipher (RFC 8439) implemented in pure Rust using traits
from the RustCrypto `cipher` crate, with optional architecture-specific
hardware acceleration (AVX2, SSE2). Additionally provides the ChaCha8, ChaCha12,
XChaCha20, XChaCha12 and XChaCha8 stream ciphers, and also optional
rand_core-compatible RNGs based on those ciphers.
"""
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "chacha8", "chacha12", "xchacha20"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cfg-if = "1"

# optional dependencies
cipher = { version = "0.3", optional = true }
rand_core = { version = "0.6", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
cipher = { version = "0.3", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["cipher"]
expose-core = []
force-soft = []
hchacha = ["cipher"]
legacy = ["cipher"]
neon = []
rng = ["rand_core"]
std = ["cipher/std"]

[package.metadata.docs.rs]
features = ["legacy", "rng", "std"]
rustdoc-args = ["--cfg", "docsrs"]
