[package]
name = "ctr"
version = "0.7.0-pre.3"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "CTR block mode of operation"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = "=0.3.0-pre.4"

[dev-dependencies]
aes = { version = "=0.7.0-pre", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
cipher = { version = "=0.3.0-pre.4", features = ["dev"] }
hex-literal = "0.2"
