[package]
name = "ctr"
version = "0.8.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "CTR block mode of operation"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = "0.3"

[dev-dependencies]
aes = { version = "0.7", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
magma = "0.7"
kuznyechik = "0.7"
cipher = { version = "0.3", features = ["dev"] }
hex-literal = "0.2"
