[package]
name = "hc-128"
version = "0.1.0"
authors = ["Quentin K"]
license = "MIT OR Apache-2.0"
description = "HC-128 Stream Cipher"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = "0.3"
zeroize = { version = "=1.3", optional = true, default-features = false }
