[package]
name = "hc-256"
version = "0.5.0" # Also update html_root_url in lib.rs when bumping this
description = "HC-256 Stream Cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/hc-256"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "0.4.4"

[dev-dependencies]
cipher = { version = "0.4.4", features = ["dev"] }
hex-literal = "0.4.0"

[features]
std = ["cipher/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
