[package]
name = "rabbit"
version = "0.5.0-pre"
description = "An implementation of the Rabbit Stream Cipher Algorithm"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65"
readme = "README.md"
documentation = "https://docs.rs/rabbit"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "rabbit", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.3"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.3", features = ["dev"] }
hex-literal = "0.4"

[features]
std = ["cipher/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
