[package]
name = "rabbit"
version = "0.5.0-pre"
description = "An implementation of the Rabbit Stream Cipher Algorithm"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/rabbit"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "rabbit", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.8"

[dev-dependencies]
cipher = { version = "=0.5.0-pre.8", features = ["dev"] }
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
