[package]
name = "rc4"
version = "0.2.0-pre"
description = "Pure Rust implementation of the RC4 stream cipher"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/rc4"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["arc4", "arcfour", "crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.8"

[dev-dependencies]
hex-literal = "0.4"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
