[package]
name = "rc4"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/rc4"
readme = "README.md"
repository = "https://github.com/RustCrypto/stream-ciphers"
license = "MIT OR Apache-2.0"
keywords = ["arc4", "arcfour", "crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
description = "Pure Rust implementation of the RC4 stream cipher"

[dependencies]
cipher = { version = "0.5.0-rc.2", features = ["stream-wrapper"] }

[dev-dependencies]
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
