[package]
name = "salsa20-core"
version = "0.2.1"
authors = ["Eric McCorkle <eric@metricspace.net>"]
license = "MIT OR Apache-2.0"
description = "Salsa Family Stream Ciphers"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = "0.3"
zeroize = { version = "1.0.0-pre", optional = true, default-features = false }

[dev-dependencies]
stream-cipher = { version = "0.3", features = ["dev"] }
block-cipher-trait = { version = "0.6", features = ["dev"] }

[badges]
travis-ci = { repository = "RustCrypto/stream-ciphers" }
