[package]
name = "salsa20-core"
version = "0.2.3"
authors = ["Eric McCorkle <eric@metricspace.net>"]
license = "Apache-2.0 OR MIT"
description = """
Generic implementation of the stream-cipher crate traits for ciphers in the
Salsa20 family. Used by the chacha20 and salsa20 crates.
"""
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = "0.3"
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
stream-cipher = { version = "0.3", features = ["dev"] }
block-cipher-trait = { version = "0.6", features = ["dev"] }

[badges]
travis-ci = { repository = "RustCrypto/stream-ciphers" }
