[package]
name = "salsa20"
version = "0.11.0-rc.2"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/salsa20"
readme = "README.md"
repository = "https://github.com/RustCrypto/stream-ciphers"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "stream-cipher", "trait", "xsalsa20"]
categories = ["cryptography", "no-std"]
description = "Pure Rust implementation of the Salsa20 stream cipher"

[dependencies]
cfg-if = "1"
cipher = { version = "0.5.0-rc.2", features = ["stream-wrapper"] }

[dev-dependencies]
cipher = { version = "0.5.0-rc.2", features = ["dev"] }
hex-literal = "1"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
